--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Profile</string>
+    <string name="app_name">Sblumbo</string>
 
     <!-- Starting page -->
     <string name="tv_start">To start the test just create a new profile</string>
